--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,11 @@
-cmake_minimum_required(VERSION 3.26)
+cmake_minimum_required(VERSION 3.20)
 include(FetchContent)
 
 project(surviving-sarntal)
 
-FetchContent_Declare(flecs
-        URL ${CMAKE_CURRENT_SOURCE_DIR}/libs/flecs-3.2.7.tar.gz
-)
+FetchContent_Declare(flecs URL ${CMAKE_CURRENT_SOURCE_DIR}/libs/flecs-3.2.7.tar.gz)
 FetchContent_MakeAvailable(flecs)
-FetchContent_Declare(
-        raylib
-        URL ${CMAKE_CURRENT_SOURCE_DIR}/libs/raylib-4.5.0.tar.gz
-)
+FetchContent_Declare(raylib URL ${CMAKE_CURRENT_SOURCE_DIR}/libs/raylib-4.5.0.tar.gz)
 FetchContent_MakeAvailable(raylib)
 
 file(GLOB_RECURSE SRC "src/*.cpp" "src/*.h")
