--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,8 @@ clang-format-validate:
 
 build-job:       # This job runs in the build stage, which runs first.
   stage: build
+  artifacts:
+    untracked: true
   script:
     - cmake -S . -B cmake-build-debug
     - cmake --build cmake-build-debug
