--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,6 +41,7 @@ clang-tidy-validate:
   stage: validate-tidy
   script:
     - clang-tidy-17 src/main.cpp -p cmake-build-debug/
+    - for f in $(find src -name '*.cpp' -or -name '*.h'); do clang-tidy-17 $f -p cmake-build-debug; done;
   dependencies:
     - build-job
 
