--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,12 @@ cmake_minimum_required(VERSION 3.20)
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/libs/cmake)
 
-#set(CMAKE_CXX_CLANG_TIDY
-#        clang-tidy-18;
-#        -format-style='file';
-#        -header-filter=${CMAKE_SOURCE_DIR}/src;
-#        -extra-arg=-std=c++17;
-#)
+set(CMAKE_CXX_CLANG_TIDY
+        clang-tidy-17;
+        -format-style='file';
+        -header-filter=${CMAKE_SOURCE_DIR}/src;
+        -extra-arg=-std=c++17;
+)
 
 include(FetchContent)
 include(ClangFormat)
