--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,8 @@ else ()
 endif ()
 #now SRC contains all .cpp and .h files in the src folder (and its subdirectories) except main.cpp
 add_library(surviving-sarntal-library ${SRC}
-        src/systems/rockSpawnStuff.h)
+        src/systems/rockSpawnStuff.h
+        src/systems/rockSpawnStuff.cpp)
 #now all those files get made into one library callled surviving-sarntal-library
 add_executable(surviving-sarntal src/main.cpp)
 #add main.cpp to surviving-sarntal executable
