Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,7 @@ build-job:       # This job runs in the build stage, which runs first.
   stage: build
   artifacts:
     untracked: true
+    expire_in: 1 hour
   script:
     - cmake -S . -B cmake-build-debug -DCMAKE_EXPORT_COMPILE_COMMANDS=1
     - cmake --build cmake-build-debug
@@ -45,6 +46,7 @@ test-job:
   artifacts:
     paths:
       - cmake-build-debug/surviving-sarntal
+    expire_in: 1 hour
 
 run-exe:
   stage: run-exe
@@ -55,6 +57,7 @@ run-exe:
   artifacts:
     paths:
       - cmake-build-debug/surviving-sarntal
+    expire_in: 1 hour
 
 
 #unit-test-job:   # This job runs in the test stage.
