--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ project(surviving-sarntal)
 add_library(raygui INTERFACE)
 target_include_directories(raygui INTERFACE libs/raygui)
 
+add_subdirectory(libs/SDL/SDL2-2.28.3 EXCLUDE_FROM_ALL)
 
 FetchContent_Declare(flecs URL ${CMAKE_CURRENT_SOURCE_DIR}/libs/flecs-3.2.7.tar.gz)
 FetchContent_MakeAvailable(flecs)
@@ -28,6 +29,8 @@ FetchContent_Declare(raylib URL ${CMAKE_CURRENT_SOURCE_DIR}/libs/raylib-4.5.0.ta
 FetchContent_MakeAvailable(raylib)
 FetchContent_Declare(googletest URL ${CMAKE_CURRENT_SOURCE_DIR}/libs/googletest-1.14.0.tar.gz)
 FetchContent_MakeAvailable(googletest)
+#FetchContent_Declare(SDL2 URL libs/SDL/SDL2-2.28.3.tar.gz)
+#FetchContent_MakeAvailable(SDL2)
 
 include_directories(libs/NITE/Include /usr/include/ni)
 
@@ -63,7 +66,7 @@ endif ()
 
 
 #link some libraries to the surviving-sarntal-library that we are defining atm
-target_link_libraries(surviving-sarntal-library PUBLIC SDL2)
+target_link_libraries(surviving-sarntal-library PUBLIC SDL2::SDL2)
 target_link_libraries(surviving-sarntal PUBLIC surviving-sarntal-library)
 #link the previously defined surviving-sarntal-library to the surviving-sarntal executable. The main.cpp has been included earlier
 
